change index css

--- a/mdtogh/templates/index.html
+++ b/mdtogh/templates/index.html
@@ -32,9 +32,11 @@
 	}
 	a {
 		color: #0388a6;
+		text-decoration: none;
 	}
 	a:hover {
 		color: #04b1d8;
+		text-decoration: none;
 	}
 	ol.book-toc li.chapter{
 		margin-bottom:0.6em
@@ -48,6 +50,18 @@
 	ol.book-toc a{
 		padding-left:4px
 	}
+	li {
+		line-height: 22px;
+	}
+	h1, h2, h3, h4, h5, h6, li, p, a, ol{
+		margin: 0;
+		padding: 0;
+		border: 0;
+	}
+	ul, ol {
+		padding: 0;
+		margin: 0 0 11px 25px;
+	}
 	h1 {
 		font-size: 36px;
 		line-height: 44px;
@@ -55,17 +69,13 @@
 	}
 	h2 {
 		font-size: 18px;
-		line-height: 44px;
 		color: #f14e32;
 		font-weight: bold;
-		margin-top: 20px;
 	}
 	h3, h4, h5, h6 {
 		font-size: 14px;
-		line-height: 44px;
 		color: #f14e32;
 		font-weight: bold;
-		margin-top: 20px;
 	}
 	ol.book-toc h1{
 		font-size: 24px;
@@ -73,18 +83,14 @@
 		margin-bottom: 0.4em;
 	}
 	ol.book-toc h2 {
-		font-size: 16px;
-		line-height: 44px;
+		font-size: 18px;
 		color: #f14e32;
 		font-weight: bold;
-		margin-top: 20px;
 	}
 	ol.book-toc h3, h4, h5, h6 {
-		font-size: 12px;
-		line-height: 44px;
+		font-size: 16px;
 		color: #f14e32;
 		font-weight: bold;
-		margin-top: 20px;
 	}
 	p {
 		margin: 0 0 11px;
