--- a/mdtogh/templates/base.html
+++ b/mdtogh/templates/base.html
@@ -11,7 +11,7 @@
     {% block page %}{% endblock %}
   </div>
   {%- block scripts %}{% endblock %}
-  <div style="text-align:center">
+  <div style="text-align:center; margin-bottom: 30px">
 	  Powered by <a href="https://github.com/marchtea/md_to_github_html">mdtogh</a>
   </div>
 </body>
