--- a/mdtogh/templates/index.html
+++ b/mdtogh/templates/index.html
@@ -15,7 +15,7 @@
   {% endif -%}
   <style>
     .file-box {
-      margin: 64px auto;
+      margin: 64px auto 10px auto;
       width: 920px;
     }
 
@@ -24,7 +24,7 @@
 		line-height: 22px;
 		<!--font-family: "adelle",Georgia,"Times New Roman",serif;-->
 		color: #4e443c;
-		background: #f0efe7 url(body.jpg);
+		background: #f0efe7;
 	}
 
 	.book-toc {
@@ -42,7 +42,7 @@
 		margin-bottom:0.6em
 	}
 	ol.book-toc, ol{
-		list-style:none
+		list-style-type: disc
 	}
 	ol.book-toc{
 		margin:30px 36px
@@ -78,17 +78,17 @@
 		font-weight: bold;
 	}
 	ol.book-toc h1{
-		font-size: 24px;
+		font-size: 22px;
 		line-height: 44px;
 		margin-bottom: 0.4em;
 	}
 	ol.book-toc h2 {
-		font-size: 18px;
+		font-size: 16px;
 		color: #f14e32;
 		font-weight: bold;
 	}
 	ol.book-toc h3, h4, h5, h6 {
-		font-size: 16px;
+		font-size: 14px;
 		color: #f14e32;
 		font-weight: bold;
 	}
