--- a/mdtogh/templates/content.html
+++ b/mdtogh/templates/content.html
@@ -113,6 +113,7 @@
 		  <article class="markdown-body entry-content" itemprop="mainContentOfPage">
 			{{ content|safe }}
 		  </article>
+		  {% if needtoc %}
 			<div id="nav">
 				{% if prevfile %}
 					<a href="{{ prevfile }}">prev</a>
@@ -125,6 +126,7 @@
 				{% endif %}
 				<span style="float: right"><a href="index.html">Back to home</a>
 			</div>
+		  {% endif %}
 		</div>
 	</div>
   </div>
